# tradingagents-providers

./: .gitignore  README.md  pyproject.toml
docs/: PLUGIN_ARCHITECTURE.md  PROVIDER_EXTENSION_SPECS.md
src/tradingagents_providers/: __init__.py  _autoactivate.pth  bootstrap.py  catalog.py  cli.py  codex_client.py  google_cloudcode_client.py  google_oauth.py  oauth.py
src/tradingagents_providers/providers/: __init__.py  provider_profiles.py  provider_registry.py  runtime.py
tests/: __init__.py  conftest.py  test_fresh_install.py
