[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tradingagents-providers"
version = "1.2.0"
description = "LLM provider plugin package for TradingAgents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TradingAgents Team" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12.0",
    "questionary>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "typer>=0.12.0",
    "questionary>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.entry-points."tradingagents.model_providers"]
catalog = "tradingagents_providers.catalog:register"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tradingagents_providers"]

[tool.hatch.build.targets.wheel.force-include]
"tradingagents_providers.pth" = "tradingagents_providers_autoactivate.pth"
